--- a/CSS Portfolio Owen Doyle.css
+++ b/CSS Portfolio Owen Doyle.css
@@ -3,8 +3,15 @@
 	text-align: center;
 	font-family: time;
 }
+
+#h2{
+	color: black;
+	text-align: left;
+	font-family: "Times New Roman";
+}
+
 body {
-	background-color: black;
+	background-color: white;
 	
 }
 .instagram{
